# homepage_init_bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  environment.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  sync-to-rool.yml
docs/: actions.md  bot.md  general.md  routes.md  sigpig.md  total.md  user.md
docs/discord/: actions.md  bot.md  general.md  sigpig.md  total.md  user.md
docs/kakao/: actions.md  app.md  friend.md  regularchat.md  teamchat.md
src/bot/discord/: __init__.py  bot.py  core.py
src/bot/discord/data/: data.example.json  data.json
src/controller/: __init__.py  general.py  sigpig.py  total.py  user.py
src/core/: config.py
src/middleware/: __init__.py  http_logger.py
src/util/: __init__.py  dispatcher.py  fastapi.py  helpers.py  logger_config.py  rabbitmq.py  requests.py
src/utils/: __init__.py  dispatcher.py  fastapi.py  helpers.py  logger_config.py  rabbitmq.py  requests.py
