[project]
name = "homepage-init-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aio-pika==9.5.5",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.13",
    "aiormq==6.8.1",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "certifi==2025.6.15",
    "click==8.2.1",
    "discord-py==2.5.2",
    "exceptiongroup==1.3.0",
    "fastapi==0.115.14",
    "frozenlist==1.7.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "multidict==6.6.3",
    "pamqp==3.3.0",
    "propcache==0.3.2",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "python-dotenv==1.1.1",
    "redis==6.2.0",
    "setuptools==78.1.1",
    "sniffio==1.3.1",
    "starlette==0.46.2",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "uvicorn==0.35.0",
    "wheel==0.45.1",
    "yarl==1.20.1",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=6.1.0",
    "pre-commit>=4.3.0",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
combine_as_imports = false
